# arxiv-reader

./: .gitignore  check_mp4s.py  cookies.json  douyin_downloader.py  main.py  out.md  out_improved.md  pyproject.toml  remove_same.py  requirements.txt  translate_paper.py
