[project]
name = "arxiv-reader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "deepl>=1.17.0",
    "fitz>=0.0.1.dev2",
    "openai>=1.40.0",
    "opencc-python-reimplemented>=0.1.7",
    "pdf2image>=1.17.0",
    "pymupdf>=1.24.0",
    "pytesseract>=0.3.10",
    "python-docx>=1.1.0",
    "sentencepiece>=0.1.99",
    "torch>=2.1.0",
    "tqdm>=4.66.0",
    "transformers>=4.41.0",
]
